--- a/rk3568-z96a.dts
+++ b/rk3568-z96a.dts
@@ -10,7 +10,8 @@
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/pinctrl/rockchip.h>
 #include <dt-bindings/input/rk-input.h>
-#include <dt-bindings/display/drm_mipi_dsi.h>
+#include <dt-bindings/display/media-bus-format.h>
+#include <dt-bindings/display/rockchip_vop.h>
 #include <dt-bindings/sensor-dev.h>
 #include "rk3568.dtsi"
 #include "rk3568-android.dtsi"
@@ -22,6 +23,10 @@
     aliases {
         fusb0 = &fusb0;
         husb0 = &husb0;
+    };
+
+    chosen: chosen {
+        bootargs = "earlycon=uart8250,mmio32,0xfe660000 console=ttyFIQ0 root=PARTUUID=614e0000-0000 rw rootwait";
     };
 
     audiopwmout_diff: audiopwmout-diff {
@@ -120,7 +125,7 @@
     leds: leds {
         compatible = "gpio-leds";
         work_led: work {
-            gpios = <&gpio0 0x0000000f GPIO_ACTIVE_LOW>;
+            gpios = <&gpio0 RK_PB7 GPIO_ACTIVE_LOW>;
         };
     };
 
@@ -185,7 +190,7 @@
         regulator-min-microvolt = <5000000>;
         regulator-max-microvolt = <5000000>;
         enable-active-high;
-        gpio = <&gpio3 0x0000000f GPIO_ACTIVE_HIGH>;
+        gpio = <&gpio3 RK_PB7 GPIO_ACTIVE_HIGH>;
         vin-supply = <&vcc5v0_sys>;
         pinctrl-names = "default";
         pinctrl-0 = <&vcc5v0_otg_pwr_en>;
@@ -199,7 +204,7 @@
         regulator-min-microvolt = <5000000>;
         regulator-max-microvolt = <5000000>;
         enable-active-high;
-        gpio = <&gpio3 0x0000000e GPIO_ACTIVE_HIGH>;
+        gpio = <&gpio3 RK_PB6 GPIO_ACTIVE_HIGH>;
         vin-supply = <&vcc5v0_sys>;
         pinctrl-names = "default";
         pinctrl-0 = <&vcc5v0_host_en>;
@@ -211,7 +216,7 @@
         regulator-min-microvolt = <5000000>;
         regulator-max-microvolt = <5000000>;
         enable-active-high;
-        gpio = <&gpio2 0x0000001d GPIO_ACTIVE_HIGH>;
+        gpio = <&gpio2 RK_PD5 GPIO_ACTIVE_HIGH>;
         vin-supply = <&vcc5v0_sys>;
         pinctrl-names = "default";
         pinctrl-0 = <&vcc5v0_otg_en>;
@@ -224,7 +229,7 @@
         regulator-min-microvolt = <3300000>;
         regulator-max-microvolt = <3300000>;
         enable-active-high;
-        gpio = <&gpio0 0x00000017 GPIO_ACTIVE_HIGH>;
+        gpio = <&gpio0 RK_PC7 GPIO_ACTIVE_HIGH>;
         vin-supply = <&vcc3v3_sys>;
 
         regulator-state-mem {
@@ -239,7 +244,7 @@
         clock-names = "ext_clock";
         pinctrl-names = "default";
         pinctrl-0 = <&wifi_enable_h>;
-        reset-gpios = <&gpio0 0x00000010 GPIO_ACTIVE_LOW>;
+        reset-gpios = <&gpio0 RK_PC0 GPIO_ACTIVE_LOW>;
     };
 
     wireless_wlan: wireless-wlan {
@@ -249,19 +254,19 @@
         status = "okay";
         pinctrl-names = "default";
         pinctrl-0 = <&wifi_host_wake_irq>;
-        WIFI,host_wake_irq = <&gpio0 0x00000014 GPIO_ACTIVE_HIGH>;
+        WIFI,host_wake_irq = <&gpio0 RK_PC4 GPIO_ACTIVE_HIGH>;
     };
 
     wireless_bluetooth: wireless-bluetooth {
         compatible = "bluetooth-platdata";
         clocks = <&rk817 1>;
         clock-names = "ext_clock";
-        uart_rts_gpios = <&gpio2 0x0000000d GPIO_ACTIVE_LOW>;
+        uart_rts_gpios = <&gpio2 RK_PB5 GPIO_ACTIVE_LOW>;
         pinctrl-names = "default", "rts_gpio";
         pinctrl-0 = <&uart1m0_rtsn>;
         pinctrl-1 = <&uart1_gpios>;
-        BT,reset_gpio = <&gpio0 0x00000011 GPIO_ACTIVE_HIGH>;
-        BT,wake_gpio = <&gpio0 0x0000000e GPIO_ACTIVE_HIGH>;
+        BT,reset_gpio = <&gpio0 RK_PC1 GPIO_ACTIVE_HIGH>;
+        BT,wake_gpio = <&gpio0 RK_PB6 GPIO_ACTIVE_HIGH>;
         status = "okay";
     };
 
@@ -271,18 +276,17 @@
 
     rk_headset: rk-headset {
         compatible = "rockchip_headset";
-        headset_gpio = <&gpio3 0x0000000a GPIO_ACTIVE_HIGH>;
-        mic_sw_gpio = <&gpio2 0x00000019 GPIO_ACTIVE_HIGH>;
+        headset_gpio = <&gpio3 RK_PB2 GPIO_ACTIVE_HIGH>;
+        mic_sw_gpio = <&gpio2 RK_PD1 GPIO_ACTIVE_HIGH>;
         pinctrl-names = "default";
         pinctrl-0 = <&hp_det>;
     };
 
     dc_det: dc-det {
         compatible = "dc_det";
-        dc_det_gpio = <&gpio3 0x00000005 GPIO_ACTIVE_HIGH>;
+        dc_det_gpio = <&gpio3 RK_PA5 GPIO_ACTIVE_HIGH>;
         pinctrl-names = "default";
         pinctrl-0 = <&dc_det_gpio_pin>;
-        phandle = <0x000001f8>;
     };
 
     bt_sco: bt-sco {
@@ -294,8 +298,8 @@
     bt_sound: bt-sound {
         compatible = "simple-audio-card";
         simple-audio-card,format = "dsp_b";
-        simple-audio-card,bitclock-inversion = <0x00000001>;
-        simple-audio-card,mclk-fs = <0x00000100>;
+        simple-audio-card,bitclock-inversion = <1>;
+        simple-audio-card,mclk-fs = <256>;
         simple-audio-card,name = "rockchip,bt";
         simple-audio-card,bitclock-master = <&bt_sound>;
         simple-audio-card,frame-master = <&bt_sound>;
@@ -312,7 +316,7 @@
         status = "okay";
         pinctrl-names = "default";
         pinctrl-0 = <&mh_248>;
-        irq-gpio = <&gpio0 0x00000016 IRQ_TYPE_LEVEL_LOW>;
+        irq-gpio = <&gpio0 RK_PC6 IRQ_TYPE_LEVEL_LOW>;
         hall-active = <1>;
     };
 
@@ -328,8 +332,8 @@
         status = "okay";
         power-supply = <&vcc3v3_lcd0_n>;
         backlight = <&backlight>;
-        enable-gpios = <&gpio3 0x00000003 GPIO_ACTIVE_HIGH>;
-        bus-format = <0x100a>;
+        enable-gpios = <&gpio3 RK_PA3 GPIO_ACTIVE_HIGH>;
+        bus-format = <MEDIA_BUS_FMT_RGB888_1X24>;
         bpc = <8>;
 
         prepare-delay-ms = <200>;
@@ -391,7 +395,6 @@
 };
 
 &edp {
-    // 强制使能edp输出，不涉及热拔插，无需设置hpd-gpios属性
     force-hpd;
     status = "okay";
 
@@ -439,7 +442,6 @@
     status = "okay";
 };
 
-// 显示开机LOGO依赖该项使能
 &route_edp {
     connect = <&vp1_out_edp>;
     status = "okay";
@@ -464,7 +466,6 @@
     status = "disabled";
 };
 
-// 显示开机LOGO依赖该项使能
 &route_hdmi {
     status = "okay";
     connect = <&vp0_out_hdmi>;
@@ -479,7 +480,7 @@
         pinctrl-names = "default";
         pinctrl-0 = <&fusb0_int>;
         vbus-supply = <&vcc5v0_otg>;
-        int-n-gpios = <&gpio0 0x0000001d GPIO_ACTIVE_HIGH>;
+        int-n-gpios = <&gpio0 RK_PD5 GPIO_ACTIVE_HIGH>;
         status = "okay";
     };
 
@@ -487,7 +488,7 @@
         compatible = "hynetek,husb311";
         reg = <0x4e>;
         interrupt-parent = <&gpio0>;
-        interrupts = <0x0000001d IRQ_TYPE_LEVEL_LOW>;
+        interrupts = <RK_PD5 IRQ_TYPE_LEVEL_LOW>;
         pinctrl-names = "default";
         pinctrl-0 = <&fusb0_int>;
         vbus-supply = <&vcc5v0_otg>;
@@ -775,8 +776,8 @@
             bat_res_up_old = <232>;
             bat_res_down_old = <50>;
             design_max_voltage = <8350>;
-            charging-gpios = <&gpio3 0x00000010 GPIO_ACTIVE_HIGH>;
-            charger-done-gpios = <&gpio3 0x00000014 GPIO_ACTIVE_HIGH>;
+            charging-gpios = <&gpio3 RK_PC0 GPIO_ACTIVE_HIGH>;
+            charger-done-gpios = <&gpio3 RK_PC4 GPIO_ACTIVE_HIGH>;
             io-channels = <&saradc 1>;
             io-channel-names = "capacity-chan-1";
             battery-use-adc;
@@ -1121,22 +1122,19 @@
     status = "okay";
 };
 
-// VP0最大支持4K输出，一般连接到HDMI
 &vp0 {
-    rockchip,primary-plane = <0x00000005>;
-    rockchip,plane-mask = <0x0000002a>;
+    rockchip,plane-mask = <(1 << ROCKCHIP_VOP2_CLUSTER1 | 1 << ROCKCHIP_VOP2_ESMART1 | 1 << ROCKCHIP_VOP2_SMART1)>;
+    rockchip,primary-plane = <ROCKCHIP_VOP2_ESMART1>;
 };
 
-// VP1最大支持2K输出，EDP一般用这个
 &vp1 {
-    rockchip,primary-plane = <0x00000004>;
-    rockchip,plane-mask = <0x00000015>;
+    rockchip,plane-mask = <(1 << ROCKCHIP_VOP2_CLUSTER0 | 1 << ROCKCHIP_VOP2_ESMART0 | 1 << ROCKCHIP_VOP2_SMART0)>;
+    rockchip,primary-plane = <ROCKCHIP_VOP2_ESMART0>;
 };
 
-// VP2只支持RGB和LVDS，最大支持1080p输出
 &vp2 {
-    rockchip,primary-plane = <0x00000000>;
     rockchip,plane-mask = <0x00000000>;
+    rockchip,primary-plane = <0x00000000>;
 };
 
 &pcie30phy {
